// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/Sidebar default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-bg-primary lck-sidebar"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_21_content"
          class="p-accordion-header-link"
          id="pv_id_21_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <span
            class="p-accordion-header-text"
          >
            No chapter to display
          </span>
           
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_21_header"
        class="p-toggleable-content"
        id="pv_id_21_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Sidebar with props items 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-bg-primary lck-sidebar"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_22_content"
          class="p-accordion-header-link"
          id="pv_id_22_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <span
            class="p-accordion-header-text"
          >
            First item
          </span>
           
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_22_header"
        class="p-toggleable-content"
        id="pv_id_22_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
          <a
            class="mock-link"
          >
            
      First subitem
    
          </a>
          <a
            class="mock-link"
          >
            
      Second subitem
    
          </a>
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_23_content"
          class="p-accordion-header-link"
          id="pv_id_23_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <span
            class="p-accordion-header-text"
          >
            Second item
          </span>
           
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_23_header"
        class="p-toggleable-content"
        id="pv_id_23_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
          <a
            class="mock-link"
          >
            
      Third subitem
    
          </a>
          <a
            class="mock-link"
          >
            
      Fourth subitem
    
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Sidebar with props items and active 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-bg-primary lck-sidebar"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_24_content"
          class="p-accordion-header-link"
          id="pv_id_24_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <span
            class="p-accordion-header-text"
          >
            First item
          </span>
           
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_24_header"
        class="p-toggleable-content"
        id="pv_id_24_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
          <a
            class="mock-link"
          >
            
      First subitem
    
          </a>
          <a
            class="mock-link"
          >
            
      Second subitem
    
          </a>
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab p-accordion-tab-active"
    >
      <div
        class="p-accordion-header p-highlight"
      >
        <a
          aria-controls="pv_id_25_content"
          aria-expanded="true"
          class="p-accordion-header-link"
          id="pv_id_25_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-down"
          />
           
          <span
            class="p-accordion-header-text"
          >
            Second item
          </span>
           
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_25_header"
        class="p-toggleable-content"
        id="pv_id_25_content"
        role="region"
      >
        <div
          class="p-accordion-content"
        >
          <a
            class="mock-link"
          >
            
      Third subitem
    
          </a>
          <a
            class="mock-link router-link-exact-active"
          >
            
      Fourth subitem
    
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
